# 2048

./: .deepsource.toml  .gitignore  CMakeLists.txt  README.md  exec.sh  game.cpp  game.h  main.cpp  reset_data.sh  setup.sh  utils.cpp  utils.h
include/: game.h
src/: main.cpp  utils.cpp
